fix(left panel styles): set bigger z-index in desktop to overlay map buttons

--- a/src/scss/layout/_left-panel.scss
+++ b/src/scss/layout/_left-panel.scss
@@ -44,7 +44,7 @@
     }
 
     &.inactive {
-        background-color: darken($lighter-gray, 10%);
+        background-color: darken($lighter-gray, 20%);
     }
 
     @include respond-to('small') {
@@ -135,6 +135,7 @@
 
     @include respond-to('medium-up') {
         height: 100%; /* Should only be set on desktop */
+        z-index: 10;
     }
 
     @include respond-to('small') {
